@@ -15,6 +15,7 @@
   * Speed up reading the PSD image format.
   * Add the -precision option.  Use it to set the maximum number of significant
     digits to be printed.
+  * Add -features option to the identify program to display channel features.
 
 2010-01-01  6.5.9-0 Cristy  <quetzlzacatenango@image...>
   * Add support for compact floating point (i.e. -depth 16 -define
